syntax = "proto3";
package rj.rj;

import "gogoproto/gogo.proto";
import "rj/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "rj/x/rj/types";

// GenesisState defines the rj module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
